--- a/src/components/Item.css
+++ b/src/components/Item.css
@@ -1,15 +1,21 @@
-.complete{
-    text-decoration: line-through;
-    text-decoration-color: navy;
-  
-}
 .item{
       display:flex;
       justify-content: center;
+      width:420px;
       align-items: center;
       color:white;
+      border: 1px solid #ddd;
+      border-radius: 23px;
+     padding:12px 12px;
+      margin: 12px;
    
 }  
+
+  .item:hover {
+    background-color: #433e3e;
+  }
+  
+
 p{
     font-family: cursive;
 }
